--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -1369,7 +1369,7 @@
    "id": "9419a5ee-ea37-40e9-a155-69216029a837",
    "metadata": {},
    "source": [
-    "Let's plot these and see what we find"
+    "Let's plot these and see what we find."
    ]
   },
   {
@@ -1408,7 +1408,7 @@
    "id": "017c8e79-87bd-43b6-8895-3d815c8cf7ff",
    "metadata": {},
    "source": [
-    "It seems that Macao and Hong Kong are the top two for this entire period, with a steady increase in phones per capita. The United Arab Emirates and Seychelles had a similar absolute increase, but with a noticably lower starting value, had larger growth factors. The lowest increase was Antigua and Barbuda, which started and ended at nearly the same amount. Interestingly, the country al"
+    "It seems that Macao and Hong Kong are the top two for this entire period, with a steady increase in phones per capita. The United Arab Emirates and Seychelles had a similar absolute increase, but with a noticably lower starting value, had larger growth factors. The lowest increase was Antigua and Barbuda, which started and ended at nearly the same amount. Interestingly, the country also had a sharp decrease in phones per capita during 2011 to 2014. Perhaps if this decrease didn't happen the country's growth would have been similar to the others?"
    ]
   },
   {
