small word change

--- a/Project/Project.ipynb
+++ b/Project/Project.ipynb
@@ -296,7 +296,7 @@
    "id": "e52a85a0-dda1-4e91-ae08-6ed055dc05db",
    "metadata": {},
    "source": [
-    "Each text has a different size, the King James Bible being the biggest of all, with about 37% of all words being from there. This is why \"lord\" appeared as one of the top words earlier."
+    "Each text has a different size, the King James Bible being the biggest of all, with about 37% of all words being from there. This must be why \"lord\" appeared as one of the top words earlier."
    ]
   },
   {
